--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --output-path docs --base-href /setup-for-dsa/",
+    "build": "ng build --base-href /setup-for-dsa/",
+    "move": "mv dist/myapp/browser/* docs/",
+    "github": "npm run build && npm run move",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
