--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --base-href /setup-for-dsa/",
     "move": "mv dist/myapp/browser/* docs/",
     "push": "git add . && git commit -m \"build files\" && git push",
-    "github": "npm run build && npm run move && npm run push",
+    "github": "pnpm run build && pnpm run move && pnpm run push",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "pnpm": "^9.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
