--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "ng serve",
     "build": "ng build --base-href /setup-for-dsa/",
     "move": "mv dist/myapp/browser/* docs/",
+    "404": "cp docs/index.html docs/404.html",
     "push": "git add . && git commit -m \"build files\" && git push",
-    "github": "pnpm run build && pnpm run move && pnpm run push",
+    "github": "pnpm run build && pnpm run move && pnpm run 404 && pnpm run push",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
