--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,23 +4,6 @@
 	"name": "Node.js & TypeScript",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"angular.ng-template",
-				"johnpapa.angular2",
-				"formulahendry.auto-close-tag",
-				"usernamehw.errorlens",
-				"dbaeumer.vscode-eslint",
-				"esbenp.prettier-vscode",
-				"pkief.material-icon-theme",
-				"vscodevim.vim",
-				"vintharas.learn-vim",
-				"tomrijndorp.find-it-faster",
-				"bradlc.vscode-tailwindcss"
-			]
-		}
-	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -32,7 +15,22 @@
 	// "postCreateCommand": "yarn install",
 
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Angular.ng-template",
+				"johnpapa.Angular2",
+				"formulahendry.auto-close-tag",
+				"usernamehw.errorlens",
+				"dbaeumer.vscode-eslint",
+				"esbenp.prettier-vscode",
+				"vscodevim.vim",
+				"vintharas.learn-vim",
+				"TomRijndorp.find-it-faster",
+				"bradlc.vscode-tailwindcss"
+			]
+		}
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
