--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "404": "cp docs/index.html docs/404.html",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "build": "ng build --base-href /setup-for-dsa/",
     "move": "mv dist/myapp/browser/* docs/",
     "push": "git add . && git commit -m \"build files\" && git push",
