--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	"forwardPorts": [4200],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm i -g pnpm",
+	"postCreateCommand": "npm i -g pnpm@latest",
 
 	// Configure tool-specific properties.
 	"customizations": {
