--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myapp",
   "version": "0.0.0",
+  "packageManager": "pnpm",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
